[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "your-library"
version = "0.1.0"
description = "Open-source Methadone dosage converter"
authors = [{ name="William Clark", email="w.max.clark@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = []

[project.urls]
Homepage = ""